--- a/package.json
+++ b/package.json
@@ -10,21 +10,16 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
-    "@tanstack/react-query": "^5.81.5",
-    "next": "15.3.8",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "viem": "^2.31.6",
-    "wagmi": "^2.16.3"
+    "next": "15.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "viem": "latest",
+    "wagmi": "latest"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@next/eslint-plugin-next": "^15.3.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
     "typescript": "^5"
   }
 }
