Refactor: in package

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
-    "next": "15.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "^15.1.9",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "viem": "latest",
     "wagmi": "latest"
   },
@@ -21,5 +21,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@react-native-async-storage/async-storage": "npm:empty-module@0.0.2"
   }
 }
