--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9.39.3",
+    "eslint-config-next": "^16.1.6",
     "typescript": "^5"
   },
   "overrides": {
