--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
+    "@tailwindcss/postcss": "^4.2.1",
     "next": "^16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "tailwindcss": "^4.2.1",
     "viem": "latest",
     "wagmi": "latest"
   },
