--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.34.3",
     "next": "^16.1.6",
+    "peerjs": "^1.5.5",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "tailwindcss": "^4.2.1",
