--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@coinbase/onchainkit": "latest",
     "@farcaster/frame-sdk": "^0.0.64",
     "@farcaster/miniapp-sdk": "^0.2.3",
+    "@rainbow-me/rainbowkit": "^2.2.10",
     "@tailwindcss/postcss": "^4.2.1",
     "@tanstack/react-query": "^5.90.21",
     "@types/canvas-confetti": "^1.9.0",
@@ -22,8 +23,8 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "tailwindcss": "^4.2.1",
-    "viem": "latest",
-    "wagmi": "latest"
+    "viem": "^2.46.3",
+    "wagmi": "^3.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
