--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "latest",
+    "@coinbase/onchainkit": "^1.1.2",
     "@farcaster/frame-sdk": "^0.0.64",
     "@farcaster/miniapp-sdk": "^0.2.3",
-    "@rainbow-me/rainbowkit": "^2.2.10",
     "@tailwindcss/postcss": "^4.2.1",
     "@tanstack/react-query": "^5.90.21",
     "@types/canvas-confetti": "^1.9.0",
@@ -23,8 +22,8 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "tailwindcss": "^4.2.1",
-    "viem": "^2.46.3",
-    "wagmi": "^3.5.0"
+    "viem": "^2.37.0",
+    "wagmi": "2.19.5"
   },
   "devDependencies": {
     "@types/node": "^20",
